combine public key and wallet address on submissions
